...
              placeholderTx="loginScreen.namePlaceholder"
              placeholderTxOptions={{ userName: "emilys" }}
              placeholderTextColor={"#00000050"}
              inputWrapperStyle={{ height: 50 }}
              status={undefined}
              containerStyle={$inputContainer}
              testID="input_username"
            />
          )}
          name="userName"
        />
        {errors.userName && (
          <Text testID="userName-error" style={$errorText} tx="loginScreen.userNameError" />
...
              placeholderTx="loginScreen.passwordPlaceholder"
              placeholderTxOptions={{ password: "emilyspass" }}
              placeholderTextColor={"#00000050"}
              inputWrapperStyle={{ height: 50 }}
              status={undefined}
              containerStyle={$inputContainer}
              testID="input_password"
            />
          )}
          name="password"
        />
        {errors.password && (
          <Text testID="password-error" style={$errorText} tx="loginScreen.passwordError" />
...
